--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,16 +10,10 @@
         android:name="com.simuladomobile.simuladomobileJBS.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
-
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.simuladomobile.simuladomobileJBS.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_administrador"
+        android:name="com.simuladomobile.simuladomobileJBS.Administrador"
+        android:label="navigation_administrador"
+        tools:layout="@layout/navigation_administrador" />
 
-    <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.simuladomobile.simuladomobileJBS.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
 </navigation>
