--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_registrar_carro"
+        android:icon="@drawable/baseline_directions_car_24"
+        android:title="Registrar Carro" />
     <item
         android:id="@+id/navigation_administrador"
         android:icon="@drawable/baseline_admin_panel_settings_24"
