--- a/app/src/main/res/layout/fragment_navigation_registrar_carro.xml
+++ b/app/src/main/res/layout/fragment_navigation_registrar_carro.xml
@@ -31,8 +31,10 @@
         android:id="@+id/buttonRegistrarEntrada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/purple_500"
         android:text="Registrar Entrada"
         android:layout_marginTop="12dp"
+        app:cornerRadius="10dp"
         app:layout_constraintTop_toBottomOf="@id/editTextPlaca"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
