--- a/app/src/main/res/layout/dialog_admin_password.xml
+++ b/app/src/main/res/layout/dialog_admin_password.xml
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
-        app:layout_constraintTop_margin="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnConfirm"
