--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,16 +5,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:padding="32dp">
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="168dp"
-        android:layout_height="162dp"
+        android:layout_width="179dp"
+        android:layout_height="166dp"
         android:layout_marginTop="80dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/splash_logo"
+        android:src="@drawable/jbs_sem_fundo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +40,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:textColorHint="@color/black"
         android:hint="Senha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +80,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="E-mail"
-        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TextView">
