--- a/app/src/main/res/layout/fragment_navigation_registrar_carro.xml
+++ b/app/src/main/res/layout/fragment_navigation_registrar_carro.xml
@@ -8,13 +8,13 @@
 
     <ImageView
         android:id="@+id/imageViewLogo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/splash_logo"
+        android:layout_width="128dp"
+        android:layout_height="110dp"
         android:contentDescription="@string/app_name"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/jbs_sem_fundo"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextPlaca"
@@ -31,25 +31,27 @@
         android:id="@+id/buttonRegistrarEntrada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:backgroundTint="@color/purple_500"
         android:text="Registrar Entrada"
-        android:layout_marginTop="12dp"
+        android:textColor="#FFFFFF"
         app:cornerRadius="10dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextPlaca"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/editTextPlaca" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewRegistros"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="100dp"
         android:clipToPadding="false"
+        android:contentDescription="Lista de veículos"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
-        android:contentDescription="Lista de veículos"
-        app:layout_constraintTop_toBottomOf="@id/buttonRegistrarEntrada"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/buttonRegistrarEntrada" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
