--- a/app/src/main/res/layout/item_registro_carro.xml
+++ b/app/src/main/res/layout/item_registro_carro.xml
@@ -43,6 +43,7 @@
             android:textSize="14sp" />
 
         <Button
+
             android:id="@+id/btnRegistrarSaida"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,7 +51,7 @@
             android:layout_marginTop="12dp"
             android:backgroundTint="@color/purple_500"
             android:text="Registrar Saída"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             card_view:cornerRadius="10dp" />
 
     </LinearLayout>
